# cpp_producer_consumer_pattern

./: .gitignore  CMakeLists.txt  FrameQueue.cpp  FrameQueue.h  README.md  main.cpp
DataTypes/: Frame.cpp  Frame.h  Task.cpp  Task.h
Queues/: FrameQueue.cpp  FrameQueue.h  TaskQueue.cpp  TaskQueue.h
Tasks/: FrameTask.cpp  FrameTask.h
ThreadPool/: ThreadPool.cpp  ThreadPool.h  WorkerThread.cpp  WorkerThread.h
